// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListenCard renders correctly for mode = 'follow ' 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "track_metadata": Object {
        "additional_info": Object {
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="follow"
  playListen={[Function]}
>
  <ForwardRef
    className="listen-card row undefined"
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row undefined"
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="col-xs-9"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-3 text-center"
      >
        <a
          href="/user/undefined"
          rel="noopener noreferrer"
          target="_blank"
        />
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for mode = 'listens' 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "track_metadata": Object {
        "additional_info": Object {
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="listens"
  playListen={[Function]}
>
  <ForwardRef
    className="listen-card row undefined"
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row undefined"
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="col-xs-9"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-3 text-center"
      >
        <div />
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;

exports[`ListenCard renders correctly for mode = 'recent ' 1`] = `
<ListenCard
  listen={
    Object {
      "listened_at": 0,
      "track_metadata": Object {
        "additional_info": Object {
          "recording_msid": "bar",
          "release_mbid": "foo",
        },
        "artist_name": "Moondog",
        "track_name": "Bird's Lament",
      },
    }
  }
  mode="recent"
  playListen={[Function]}
>
  <ForwardRef
    className="listen-card row undefined"
    onDoubleClick={[Function]}
  >
    <div
      className="listen-card row undefined"
      onDoubleClick={[Function]}
      style={
        Object {
          "background": "#FFFFFF",
          "border": "1px solid #EEEEEE",
          "borderRadius": "8px",
          "boxShadow": "0 1px 1px rgba(192,192,192,0.1), 0 2px 2px rgba(192,192,192,0.15), 0 4px 4px rgba(192,192,192,0.20)",
          "boxSizing": "border-box",
          "height": "100%",
        }
      }
    >
      <div
        className="col-xs-9"
      >
        <MediaQuery
          minWidth={768}
        />
        <MediaQuery
          maxWidth={767}
        />
      </div>
      <div
        className="col-xs-3 text-center"
      >
        <a
          href="/user/undefined"
          rel="noopener noreferrer"
          target="_blank"
        />
      </div>
    </div>
  </ForwardRef>
</ListenCard>
`;
